Noch mehr Anpassungen für mobile Cyberdevices.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
 	<title>CyberMorningshow</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 	<link rel="stylesheet" href="/css/style.css">
@@ -33,13 +36,15 @@
 				</div>
 			</section>
 
-<!--
+			<!--
 			<section class="team">
+				<h2>Team</h2>
 				<div class="person">
 					<span class="name">couchsofa</span>
 					<div class="twitter"><a href="https://twitter.com/couchsofa">@couchsofa</a></div>
 				</div>
-			</section>-->
+			</section>
+			-->
 
 			<section class="contact">
 				<h2>Kontakt</h2>
