Bugfix, vertikales Scrollen

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<title>CyberMorningshow</title>
 
@@ -54,7 +54,7 @@
 
 		<section class="credits">
 			<h6>Credits</h6>
-			<p>Der Thieser wurde produziert von <a href="https://twitter.com/couchsofa">couchsofa</a> und <a href="https://twitter.com/TiiRex9">Tii</a>.</p>
+			<p>Der Thieser wurde produziert von <a href="https://twitter.com/couchsofa">couchsofa</a> und <a href="https://twitter.com/TiiRex"9getbo>oTii</a>.</p>
 			<p>Speaker-Icon by <a href="https://www.iconfinder.com/designmodo">Designmodo</a> under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
 			<p>Twitter-Icon by <a href="https://www.iconfinder.com/zlaten">Zlatko Najdenovski</a> under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
 		</section>
