--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 		<section class="credits">
 			<h6>Credits</h6>
-			<p>Der Thieser wurde produziert von <a href="https://twitter.com/couchsofa">couchsofa</a> und <a href="https://twitter.com/TiiRex"9getbo>oTii</a>.</p>
+			<p>Der Thieser wurde produziert von <a href="https://twitter.com/couchsofa">couchsofa</a> und <a href="https://twitter.com/TiiRex9">Tii</a></p>
 			<p>Speaker-Icon by <a href="https://www.iconfinder.com/designmodo">Designmodo</a> under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
 			<p>Twitter-Icon by <a href="https://www.iconfinder.com/zlaten">Zlatko Najdenovski</a> under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
 		</section>
