--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
 
 			<section class="contact">
 				<h2>Kontakt</h2>
-				<span class="icon-twitter-big"></span> <a href="https://twitter.com/cymoshow">@CyMoShow</a>
+				<div>
+					<span class="icon-twitter-big"></span> <a href="https://twitter.com/cymoshow">@CyMoShow</a>
+				</div>
+				<div>
+					<span class="icon"></span> <a href="https://webirc.hackint.org/#cybermorningshow">#CyberMorningshow auf hackint</a>
+				</div>
 			</section>
 		</div>
 
