Veranstaltungsnamen fett markiert

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<section class="next">
 				<h2>Nächste Sendung</h2>
 				<p>
-					Wir befinden uns zur Zeit in der Planungphase für eine eventuelle <span class="cyber">CyberMorningshow</span> zur <a href="https://eh17.easterhegg.eu/dev/Random">Easterhegg</a> und der <a href="https://entropia.de/GPN17">Gulaschprogrammiernacht</a>. Stay tuned.
+					Wir befinden uns zur Zeit in der Planungphase für eine eventuelle <span class="cyber">CyberMorningshow</span> zur <a href="https://eh17.easterhegg.eu/dev/Random"><strong>Easterhegg</strong></a> und der <a href="https://entropia.de/GPN17"><strong>Gulaschprogrammiernacht</strong></a>. Stay tuned.
 				</p>
 			</section>
 
