--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					Wir befinden uns zur Zeit in der Planungphase für eine eventuelle <span class="cyber">CyberMorningshow</span> zur <a href="https://eh17.easterhegg.eu/dev/Random"><strong>Easterhegg</strong></a> und der <a href="https://entropia.de/GPN17"><strong>Gulaschprogrammiernacht</strong></a>. Stay tuned.
 				</p>
 -->
-				<p> CyberMorningshow auf der Easterhegg 2017 (#eh17) in Mühlheim (Main) bei Frankfurkt (Main) am Sonntag 16.04.2017 um 11:30 (AM!) im grossen Kolleg (bei der Kegelbahn)</p>
+<p><span class="cyber"> CyberMorningshow</span> auf der Easterhegg 2017 (#eh17) in Mühlheim (Main) bei Frankfurkt (Main) am Sonntag 16.04.2017 um 11:30 (AM!) im grossen Kolleg (bei der Kegelbahn)</p>
 			</section>
 
 			<!--
