Verlinkung der Interviews von der EH17

--- a/index.html
+++ b/index.html
@@ -1,82 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<title>CyberMorningshow</title>
+    <title>CyberMorningshow</title>
 
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
-	<link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-	<header>
-		<div id="cyber"></div>
-		<div id="morningshow">Morningshow</div>
-	</header>
+    <header>
+        <div id="cyber"></div>
+        <div id="morningshow">Morningshow</div>
+    </header>
 
-	<div class="container">
-		<div>
-			<section class="introduction">
-				<p class="lead">An einem grauen Morgen im kalten Hannover begab es sich, dass eine Gruppe von Nerds auf einem eskalationsbedürftigen Event zusammenkamen und beschlossen eine Morningshow ins Leben zu rufen.</p><p class="lead">Dies war die Geburtsstunde der <span class="cyber">CyberMorningshow</span></p>
-			</section>
+    <div class="container">
+        <div>
+            <section class="introduction">
+                <p class="lead">An einem grauen Morgen im kalten Hannover begab es sich, dass eine Gruppe von Nerds auf einem eskalationsbedürftigen Event zusammenkamen und beschlossen eine Morningshow ins Leben zu rufen.</p><p class="lead">Dies war die Geburtsstunde der <span class="cyber">CyberMorningshow</span></p>
+            </section>
 
-			<section class="next">
-				<h2>Nächste Sendung</h2>
-<!--				<p>
-					Wir befinden uns zur Zeit in der Planungphase für eine eventuelle <span class="cyber">CyberMorningshow</span> zur <a href="https://eh17.easterhegg.eu/dev/Random"><strong>Easterhegg</strong></a> und der <a href="https://entropia.de/GPN17"><strong>Gulaschprogrammiernacht</strong></a>. Stay tuned.
-				</p>
--->
-<p><span class="cyber"> CyberMorningshow</span> auf der Easterhegg 2017 (#eh17) in Mühlheim (Main) bei Frankfurkt (Main) am Sonntag 16.04.2017 um 11:30 (AM!) im grossen Kolleg (bei der Kegelbahn)</p>
-			</section>
+            <section class="next">
+                <h2>Nächste Sendung</h2>
+                <p>
+                    Die nächste <span class="cyber">CyberMorningshow</span> findet auf der <a href="https://gulas.ch">#GPN17</a> statt. Details werden zeitnahe zur GPN bekanntgegeben.
+                </p>
+            </section>
 
-			<!--
-			<section class="team">
-				<h2>Team</h2>
-				<div class="person">
-					<span class="name">couchsofa</span>
-					<div class="twitter"><a href="https://twitter.com/couchsofa">@couchsofa</a></div>
-				</div>
-			</section>
-			-->
+            <section class="prev">
+                <h2>Bisherige Sendungen</h2>
+                <article class="show">
+                    <h4>Easterhegg 2017</h4>
+                    <p>Zur Video-Aufzeichnung: <a href="https://media.ccc.de/v/EH2017-8566-cybermorningshow">[media.ccc.de]</a> <a href="https://www.youtube.com/watch?v=K_pioapbrAE">[YouTube]</a></p>
+                    
+                    <p>Die geführten Interviews in voller Länge: 
+                    <br>
+                    <a class="eh17-interview-clip" href="/audio/eh17/cert-full.mp3">[CERT]</a>
+                    <a class="eh17-interview-clip" href="/audio/eh17/kueche-full.mp3">[Küche]</a>
+                    <a class="eh17-interview-clip" href="/audio/eh17/lino-full.mp3">[Lino]</a>
+                    <a class="eh17-interview-clip" href="/audio/eh17/lounge-full.mp3">[Lounge-Orga]</a>
+                    <a class="eh17-interview-clip" href="/audio/eh17/noc-full.mp3">[NOC]</a>
+                    <a class="eh17-interview-clip" href="/audio/eh17/poc-full.mp3">[POC]</a>
+                    <br>
+                    <audio id="eh17-interviews-player" controls></audio>
+                    </p>
+                </article>
+            </section>
 
-			<section class="contact">
-				<h2>Kontakt</h2>
-				<div>
-					<span class="icon-twitter-big"></span> <a href="https://twitter.com/cymoshow">@CyMoShow</a>
-				</div>
-				<div>
-					<span class="icon"></span> <a href="https://webirc.hackint.org/#cybermorningshow">#CyberMorningshow auf hackint</a>
-				</div>
-			</section>
-		</div>
+            <!--
+            <section class="team">
+                <h2>Team</h2>
+                <div class="person">
+                    <span class="name">couchsofa</span>
+                    <div class="twitter"><a href="https://twitter.com/couchsofa">@couchsofa</a></div>
+                </div>
+            </section>
+            -->
 
-		<section class="credits">
-			<h6>Credits</h6>
-			<p>Der Thieser wurde produziert von <a href="https://twitter.com/couchsofa">couchsofa</a> und <a href="https://twitter.com/TiiRex9">Tii</a></p>
-			<p>Speaker-Icon by <a href="https://www.iconfinder.com/designmodo">Designmodo</a> under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
-			<p>Twitter-Icon by <a href="https://www.iconfinder.com/zlaten">Zlatko Najdenovski</a> under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
-		</section>
-	</div>
+            <section class="contact">
+                <h2>Kontakt</h2>
+                <div>
+                    <span class="icon-twitter-big"></span> <a href="https://twitter.com/cymoshow">@CyMoShow</a>
+                </div>
+                <div>
+                    <span class="icon"></span> <a href="https://webirc.hackint.org/#cybermorningshow">#CyberMorningshow auf hackint</a>
+                </div>
+            </section>
+        </div>
 
-	<aside style="display:none">
-		<audio id="tnte-jingle" style="display:none">
-			<source src="audio/tnte.ogg" type="audio/ogg">
-			<source src="audio/tnte.mp3" type="audio/mpeg">
-		</audio>
-	</aside>
+        <section class="credits">
+            <h6>Credits</h6>
+            <p>Der Thieser wurde produziert von <a href="https://twitter.com/couchsofa">couchsofa</a> und <a href="https://twitter.com/TiiRex9">Tii</a></p>
+            <p>Speaker-Icon by <a href="https://www.iconfinder.com/designmodo">Designmodo</a> under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
+            <p>Twitter-Icon by <a href="https://www.iconfinder.com/zlaten">Zlatko Najdenovski</a> under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
+        </section>
+    </div>
 
-	<script src="/js/jquery-3.1.1.min.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script>
-		$(".tnte").mouseover(function() {
-			$("#tnte-jingle").trigger("play");
-		}).mouseout(function() {
-			$("#tnte-jingle").trigger("pause")
-				.prop("currentTime", 0);
-		});
-	</script>
+    <aside style="display:none">
+        <audio id="tnte-jingle" style="display:none">
+            <source src="audio/tnte.ogg" type="audio/ogg">
+            <source src="audio/tnte.mp3" type="audio/mpeg">
+        </audio>
+    </aside>
+
+    <script src="/js/jquery-3.1.1.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script>
+        $(".tnte").mouseover(function() {
+            $("#tnte-jingle").trigger("play");
+        }).mouseout(function() {
+            $("#tnte-jingle").trigger("pause")
+                .prop("currentTime", 0);
+        });
+
+        $(".eh17-interview-clip").click(function(e) {
+            var player = $("#eh17-interviews-player");
+            var url = $(this).attr("href");
+
+            player.prop("src", url).trigger("play");
+
+            e.preventDefault();
+            return false;
+        })
+    </script>
 </body>
 </html>
