Added minor details
Added "(td00)" to "Thies"

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!--        <section class="team">
                 <h2>Team</h2>
                 <div class="person">
-                    <span class="name">Thies</span>
+                    <span class="name">Thies (td00)</span>
                     <div class="company"><a href="https://eskalation.rocks">Thies & Thies Eskalations GbR</a></div>
                     <div class="city"><a href="https://www.openstreetmap.org/#map=10/52.2643/10.5253">Braunschweig</a></div>
                     <div class="twitter"><a href="https://twitter.com/_td00_">@_td00_</a></div>
