added Tii & Couchsofa for team

--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
                     <div class="twitter"><a href="https://twitter.com/_td00_">@_td00_</a></div>
                     <div class="mastodon"><a href="https://chaos.social/td00">@td00@chaos.social</a></div>
                 </div>
-                <h2>Team</h2>
                 <div class="person">
                     <span class="name">couchsofa</span>
                     <div class="twitter"><a href="https://twitter.com/couchsofa">@couchsofa</a></div>
+                </div>
+                <div class="person">
+                    <span class="name">Tii</span>
+                    <div class="twitter"><a href="https://twitter.com/TiiRex9">@TiiRex9</a></div>
                 </div>
             </section>
             -->
