--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </p>
                 </article>
             </section>
-    <!--        <section class="team">
+            <section class="team">
                 <h2>Team</h2>
                 <div class="person">
                     <span class="name">Thies (td00)</span>
@@ -67,7 +67,7 @@
                     <div class="twitter"><a href="https://twitter.com/TiiRex9">@TiiRex9</a></div>
                 </div>
             </section>
-            -->
+            
 
             <section class="contact">
                 <h2>Kontakt</h2>
