fixed js linking

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </audio>
     </aside>
 
-    <script src="/js/jquery-3.1.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script>
         $(".tnte").mouseover(function() {
             $("#tnte-jingle").trigger("play");
