--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section class="next">
                 <h2>Nächste Sendung</h2>
                 <p>
-                    Die nächste <span class="cyber">CyberMorningshow</span> findet auf der <a href="https://gulas.ch">#GPN17</a> statt. Details werden zeitnahe zur GPN bekanntgegeben.
+                    Die letzte <span class="cyber">CyberMorningshow</span> fand auf der <a href="https://gulas.ch">#GPN17</a> statt.
                 </p>
             </section>
 
@@ -48,6 +48,10 @@
                     <audio id="eh17-interviews-player" controls></audio>
                     </p>
                 </article>
+		<article class="show">
+			<h4>GPN17</h4>
+			<p>Zur Video-Aufzeichnung: <a href="">[media.ccc.de]</a> <a href="">[YouTube]</a></p>
+		</article>
             </section>
     <!--        <section class="team">
                 <h2>Team</h2>
