Added Links to GPN17

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </article>
 		<article class="show">
 			<h4>GPN17</h4>
-			<p>Zur Video-Aufzeichnung: <a href="">[media.ccc.de]</a> <a href="">[YouTube]</a></p>
+			<p>Zur Video-Aufzeichnung: <a href="https://media.ccc.de/v/gpn17-8580-cybermorning_show">[media.ccc.de]</a> <a href="https://www.youtube.com/watch?v=_L8dzgqJ6OM">[YouTube]</a></p>
 		</article>
             </section>
     <!--        <section class="team">
