--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <section class="next">
                 <h2>Nächste Sendung</h2>
                 <p>
-                    Sobald der nächste Termin bekannt ist, wird er hier und auf Twitter kommuniziert...
-                </p>
+		Die nächste CyberMorningshow findet auf der <a href="https://2017.mrmcd.net/">MRMCD 2017</a>  statt. Den genauen Termin werden wir hier und auf <a href="https://twitter.com/cymoshow">Twitter</a> bekannt machen.
+		</p>
             </section>
 
             <section class="prev">
