forgot the cyber span

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section class="next">
                 <h2>Nächste Sendung</h2>
                 <p>
-		Die nächste CyberMorningshow findet auf der <a href="https://2017.mrmcd.net/">MRMCD 2017</a>  statt. Den genauen Termin werden wir hier und auf <a href="https://twitter.com/cymoshow">Twitter</a> bekannt machen.
+		Die nächste <span class="cyber">CyberMorningshow</span> findet auf der <a href="https://2017.mrmcd.net/">MRMCD 2017</a>  statt. Den genauen Termin werden wir hier und auf <a href="https://twitter.com/cymoshow">Twitter</a> bekannt machen.
 		</p>
             </section>
 
