--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <section class="prev">
                 <h2>Bisherige Sendungen</h2>
                 <article class="prevshow">
-                     <h4>17. Gullaschprogrammiernacht <time>(25. - 28. Mai 2017)</time></h4>
+                     <h4>17. Gulaschprogrammiernacht <time>(25. - 28. Mai 2017)</time></h4>
                     
                     <p>Zur Video-Aufzeichnung: <a href="https://media.ccc.de/v/gpn17-8580-cybermorning_show">[media.ccc.de]</a> <a href="https://www.youtube.com/watch?v=_L8dzgqJ6OM">[YouTube]</a></p>
                 </article>
